<resources>
    <string name="app_name">Shift CFT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_card_bin">Enter Card BIN</string>
    <string name="submit">Submit</string>
    <string name="history">History</string>
    <string name="bank">Bank</string>
    <string name="type">Type</string>
    <string name="scheme_network">Scheme/Network</string>
    <string name="brand">Brand</string>
    <string name="prepaid">Prepaid</string>
    <string name="card_number">Card Number</string>
    <string name="length">Length</string>
    <string name="luhn">Luhn</string>
    <string name="country">Country</string>
    <string name="show_details">Show Details</string>
    <string name="current_history_is_empty">Current History is Empty</string>
    <string name="chooser_title">Chooser Menu</string>
</resources>