<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RequestFragment">

    <EditText
        android:id="@+id/card_bin_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_card_bin"
        android:maxLength="9"
        android:inputType="numberSigned|textPersonName"
        android:minHeight="50dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColorHint="#A1887F"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/card_bin_edit_text"
        app:layout_constraintStart_toStartOf="@+id/card_bin_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/card_bin_edit_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/history_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/submit_button"
        app:layout_constraintStart_toStartOf="@+id/submit_button"
        app:layout_constraintTop_toBottomOf="@+id/details_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/details_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/show_details"
        app:layout_constraintEnd_toEndOf="@+id/submit_button"
        app:layout_constraintStart_toStartOf="@+id/submit_button"
        app:layout_constraintTop_toBottomOf="@+id/submit_button" />
</androidx.constraintlayout.widget.ConstraintLayout>