<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="400dp"
        android:layout_height="450dp"
        android:layout_gravity="center"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/scheme_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:padding="4dp"
                android:text="@string/scheme_network"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:padding="4dp"
                android:text="@string/type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/bank_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:padding="4dp"
                android:text="@string/bank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35000002" />

            <TextView
                android:id="@+id/name_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/bank_text_view"
                app:layout_constraintStart_toStartOf="@+id/bank_text_view"
                app:layout_constraintTop_toBottomOf="@+id/bank_text_view"
                tools:text="Jyske Bank, Hjørring" />

            <TextView
                android:id="@+id/number_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/domain_result"
                app:layout_constraintStart_toStartOf="@+id/domain_result"
                app:layout_constraintTop_toBottomOf="@+id/domain_result"
                tools:text="+4589893300" />

            <TextView
                android:id="@+id/domain_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/name_result"
                app:layout_constraintStart_toStartOf="@+id/name_result"
                app:layout_constraintTop_toBottomOf="@+id/name_result"
                tools:text="www.jyskebank.dk" />

            <TextView
                android:id="@+id/brand_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/brand"
                app:layout_constraintEnd_toEndOf="@+id/scheme_text_view"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="@+id/scheme_text_view"
                app:layout_constraintTop_toBottomOf="@+id/scheme_result" />

            <TextView
                android:id="@+id/brand_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/brand_text_view"
                app:layout_constraintStart_toStartOf="@+id/brand_text_view"
                app:layout_constraintTop_toBottomOf="@+id/brand_text_view"
                tools:text="VISA/DANKORT" />

            <TextView
                android:id="@+id/scheme_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/scheme_text_view"
                app:layout_constraintStart_toStartOf="@+id/scheme_text_view"
                app:layout_constraintTop_toBottomOf="@+id/scheme_text_view"
                tools:text="VISA/NETWORK" />

            <TextView
                android:id="@+id/prepaid_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/prepaid"
                app:layout_constraintEnd_toEndOf="@+id/type_result"
                app:layout_constraintStart_toStartOf="@+id/type_result"
                app:layout_constraintTop_toBottomOf="@+id/type_result" />

            <TextView
                android:id="@+id/prepaid_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/prepaid_text_view"
                app:layout_constraintStart_toStartOf="@+id/prepaid_text_view"
                app:layout_constraintTop_toBottomOf="@+id/prepaid_text_view"
                tools:text="Yes/No" />

            <TextView
                android:id="@+id/card_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/card_number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.168"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.733" />

            <TextView
                android:id="@+id/lenght_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/length"
                app:layout_constraintStart_toStartOf="@+id/card_number_text_view"
                app:layout_constraintTop_toBottomOf="@+id/card_number_text_view" />

            <TextView
                android:id="@+id/luhn_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:text="@string/luhn"
                app:layout_constraintEnd_toEndOf="@+id/card_number_text_view"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/lenght_text_view"
                app:layout_constraintTop_toBottomOf="@+id/card_number_text_view" />

            <TextView
                android:id="@+id/card_length_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/lenght_text_view"
                app:layout_constraintTop_toBottomOf="@+id/lenght_text_view"
                tools:text="16" />

            <TextView
                android:id="@+id/luhn_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/luhn_text_view"
                app:layout_constraintStart_toStartOf="@+id/luhn_text_view"
                app:layout_constraintTop_toBottomOf="@+id/luhn_text_view"
                tools:text="Yes/No" />

            <TextView
                android:id="@+id/country_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                android:text="@string/country"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.733"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.732" />

            <TextView
                android:id="@+id/alpha_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/country_result"
                app:layout_constraintTop_toTopOf="@+id/country_result"
                tools:text="DE" />

            <TextView
                android:id="@+id/country_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/country_text_view"
                app:layout_constraintStart_toStartOf="@+id/country_text_view"
                app:layout_constraintTop_toBottomOf="@+id/country_text_view"
                tools:text="Denmark" />

            <TextView
                android:id="@+id/latitude_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/alpha_text_view"
                app:layout_constraintTop_toBottomOf="@+id/country_result"
                tools:text="latitude" />

            <TextView
                android:id="@+id/longitude_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                app:layout_constraintEnd_toEndOf="@+id/country_text_view"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/latitude_result"
                app:layout_constraintTop_toTopOf="@+id/latitude_result"
                tools:text="longitude" />

            <TextView
                android:id="@+id/type_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/type_text_view"
                app:layout_constraintStart_toStartOf="@+id/type_text_view"
                app:layout_constraintTop_toBottomOf="@+id/type_text_view"
                tools:text="Credit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>